# task-manager

./: .env  .gitignore  .todo-app.db  TODO.md  docker-compose.yml  nginx.dev.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 2888e4e078ef_create_todos_table.py
api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/alembic/versions/: 9e33de5fd23a_add_use_id_to_todos.py
api/app/: auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  models.py  schemas.py  utils.py
api/app/routes/: todo.py
api/tests/: factories.py
api/tests/routes/: test_todo.py
app/: config.py  database.py  dependencies.py  main.py
app/routes/: todo.py
frontend/: eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  transform-api.js  tsconfig.json
frontend/src/: middleware.ts
frontend/src/api/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/src/app/: api-client-config.ts  get-query-client.ts  globals.css  layout.tsx  page.tsx  providers.tsx  theme.css
frontend/src/app/@modal/(.)todos/new/: page.tsx
frontend/src/app/api/[[...proxy]]/: route.ts
frontend/src/app/api/user-image/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/todos/: layout.tsx  loading.tsx  page.tsx  todos-table.tsx
frontend/src/app/todos/_components/: todos-table.tsx  users-badge.tsx
frontend/src/app/todos/new/: page.tsx
frontend/src/app/ui/: create-todo-form.tsx  edit-todo-form.tsx  modal.tsx
frontend/src/lib/: auth0.ts  utils.ts
tests/: conftest.py  seed.py
(+3 files in other folders)
